--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,16 +1,18 @@
 body {
-    color: red;
+    color: black;
+    background: rgba(71, 30, 153, 0.397) ;
  }
 
 #header-img img {
-    height: 800px;
+    height: auto;
+    width: auto;
 	float:inherit;
-	display:inherit;
-	background: #FF0000;
+	display: initial;
 	text-align: center;
     vertical-align: middle;
-    margin: auto; 
-    min-width: 100%;
-    min-height: 100%;
+    min-width: 25%;
+    min-height: 25%;
+    max-width: 32%;
+    max-height: 99%;
 }
 
