--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,18 +1,87 @@
 body {
     color: black;
-    background: rgba(71, 30, 153, 0.397) ;
+    background-color: rgba(0, 250, 12, 0.13) ;
+    
  }
 
 #header-img img {
-    height: auto;
-    width: auto;
-	float:inherit;
 	display: initial;
-	text-align: center;
-    vertical-align: middle;
-    min-width: 25%;
-    min-height: 25%;
-    max-width: 32%;
-    max-height: 99%;
+    vertical-align: middle; 
+    background-image: url("./Acai & Juice Bar/images/logo.jpg");
+    background-repeat: repeat-x;
+    background-position:center;
+    background-size:cover;
+    height: 500px;
+    width: auto;
 }
 
+.jumbotron {
+    margin: 0px;
+    padding: 30px;
+    color: white;
+    background-image: linear-gradient(to right, #5637DD, #3046C5, #60106B);
+}
+
+.navbar {
+    background-color: #901CAD;
+}
+
+h1, h2, h3 {
+    font-family: 'Lobster', "Paprika", 'Indie Flower';
+}
+
+h1 {
+    color: white;
+    font-size: 5rem;
+}
+
+h2 {
+    color: #3046c5;
+    text-transform: uppercase;
+}
+
+header h2 {
+    color: #cec8ff;
+    font-family: "Open Sans", sans-serif;
+}
+
+h3 {
+    color: white;
+}
+
+.site-footer {
+    background-image: linear-gradient(#CEC8FF, white);
+    padding: 20px 0;
+}
+
+.row-content {
+    padding: 50px 0;
+    border-bottom: 0px ridge;
+    min-height: 200px;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+a:hover {
+    cursor: pointer;
+    text-decoration: none;
+    color: #CEC8FF;
+}
+
+.carousel-caption {
+    background-color: rgba(0,0,0,0.5);
+}
+
+.carousel {
+    border: solid #5637DD;
+}
+
+#carouselButton {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: 100;
+}
