--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -85,3 +85,75 @@ a:hover {
     bottom: 0;
     z-index: 100;
 }
+
+header, footer {
+    background-color:seagreen;
+    text-align: center;
+    min-width: 500px;
+  }
+  
+  main {
+    display: grid;
+    grid-template-columns: 250px 250px;
+    grid-template-rows: repeat(3, 450px);
+    grid-gap: 20px;
+    margin-top: 44px;
+    grid-auto-rows: 500px;
+    justify-self: stretch;
+  }
+  
+  h2 {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 18px;
+    font-weight: 600;
+    letter-spacing: 0.3px;
+    text-align: left;
+    color: seagreen;
+    padding: 10px 0px 10px 10px;
+  }
+  
+  img {
+    width: 90%;
+    height: auto;
+  }
+  
+  .recipe {
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.5);
+  }
+  
+  .bowl-ingredients {
+    display: inline-block;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 16px;
+    font-weight: 300;
+    letter-spacing: 0.1px;
+    text-align: left;
+    color: rgb(22, 19, 43);
+    position: relative;
+    bottom: 5px;
+    
+  }
+  
+  .description {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 1.29;
+    letter-spacing: 0.1px;
+    text-align: left;
+    color: rgb(1, 1, 29);
+    padding: 5px 0px 5px 5px;
+    border-top: 1px solid darkmagenta;
+  }
+  
+  .logo {
+    width: 115px;
+    height: 150px;
+    object-fit:contain;
+    padding: 20px;
+  }
+  
+  .container {
+    min-width: 500px;
+    margin: auto;
+  }
