--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -3,26 +3,15 @@ body {
   background-color: rgba(0, 250, 12, 0.13) ;
 }
 
-#header-img img {
-	display: initial;
-  vertical-align: middle; 
-  background-image: url("./Acai & Juice Bar/images/logo.jpg");
-  background-repeat: repeat-x;
-  background-position:center;
-  background-size:cover;
-  height: 500px;
-  width: auto;
-}
-
 .jumbotron {
   margin: 0px;
   padding: 30px;
-  color: rgb(234, 234, 241);
-  background-image: linear-gradient(to right, #0e5e03, #30c544de, #0af30a54);
+  background-image: linear-gradient(to bottom, green, lightgreen, rgb(247, 247, 119));
 }
 
 .navbar {
-  background-color: #0bb305;
+  background-color: rgb(247, 247, 119);
+  color: black;
 }
 
 h1, h2, h3 {
@@ -30,7 +19,7 @@ h1, h2, h3 {
 }
 
 h1 {
-  color: white;
+  color: black;
   font-size: 5rem;
 }
 
@@ -40,17 +29,17 @@ h2 {
   font-weight: 600;
   letter-spacing: 0.3px;
   text-align: left;
-  color: seagreen;
+  color: teal;
   padding: 10px 0px 10px 10px;
   text-transform: uppercase;
 }
 
 h3 {
-  color: #049aa5e3;
+  color: teal;
 }
 
 .site-footer {
-  background-image: linear-gradient(#049aa5e3, white);
+  background-image: linear-gradient(teal, lightyellow);
   padding: 20px 0;
 }
 
@@ -68,7 +57,7 @@ a {
 a:hover {
   cursor: pointer;
   text-decoration: none;
-  color: #CEC8FF;
+  color: rgb(50, 7, 241);
 }
 
 
@@ -80,11 +69,6 @@ main {
   margin-top: 44px;
   grid-auto-rows: 500px;
   justify-self: stretch;
-}
-  
-img {
-  width: 90%;
-  height: auto;
 }
   
 .recipe {
