--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,12 +1,13 @@
 body {
   color: black;
-  background-color: rgba(0, 250, 12, 0.13) ;
+  background-color: rgba(0, 250, 12, 0.13) ; 
 }
 
 .jumbotron {
   margin: 0px;
   padding: 30px;
   background-image: linear-gradient(to bottom, green, lightgreen, rgb(247, 247, 119));
+  ;
 }
 
 .navbar {
@@ -110,4 +111,3 @@ main {
   min-width: 500px;
   margin: auto;
 }
-
