--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,6 +1,6 @@
 body {
   color: black;
-  background-color: rgba(0, 250, 12, 0.13) ; 
+  background-color: rgb(236, 199, 236); 
 }
 
 .jumbotron {
@@ -40,7 +40,7 @@ h3 {
 }
 
 .site-footer {
-  background-image: linear-gradient(teal, lightyellow);
+  background-image: linear-gradient(lightyellow, lightgreen);
   padding: 20px 0;
 }
 
@@ -111,3 +111,65 @@ main {
   min-width: 500px;
   margin: auto;
 }
+
+#home-page {
+  text-align: center;
+  padding: 180px 0;
+  background: violet;
+  --main-header-color: white;
+  color: var(--main-header-color);
+  opacity: 1;
+  background-image: url('/Acai & Juice Bar/images/fruit/Blueberries-Violet\ BG.jpg');
+  background-position: center;
+  background-repeat: repeat;
+  background-size: cover;
+}
+ 
+.text-center {
+  color: black;
+  background-color: rgba(236, 199, 236, 0.603);
+}
+
+#contactUsCards {
+  text-align:start;
+  padding: 180px 0;
+  background: lightyellow;
+  --main-header-color: black;
+  color: var(--main-header-color);
+  opacity: 0.8;
+  background-image: url('/Acai & Juice Bar/images/fruit/Coconut\ -\ light-yellow\ bg.jpg');
+  background-position: center;
+  background-repeat: repeat;
+  background-size: cover;
+}
+
+#aboutUsSection {
+  text-align: start;
+  padding: 180px 0;
+  background: white;
+  --main-header-color: black;
+  color: var(--main-header-color);
+  opacity: 0.9;
+  background-image: url('/Acai & Juice Bar/images/fruit/Coconut\ -\ white\ bg.jpg');
+  background-position: center;
+  background-repeat: repeat;
+  background-size: cover;
+}
+
+.aboutUsText {
+  color: black;
+  background-color: rgba(255, 255, 255, 0.664);
+}
+
+.menuBody {
+    text-align: start;
+    padding: 180px 0;
+    background: white;
+    --main-header-color: black;
+    color: var(--main-header-color);
+    opacity: 0.9;
+    background-image: url('/Acai & Juice Bar/images/fruit/Coconut\ -\ white\ bg.jpg');
+    background-position: center;
+    background-repeat: repeat;
+    background-size: cover;
+  }
